--- a/menu/exchange.html
+++ b/menu/exchange.html
@@ -22,7 +22,7 @@
                             <div class="exchange__nav__bar__logo__pokedex">PokéDEX</div>
                         </a>
                     </div>
-                    <div class="exchange__nav__bar__trade exchange__nav__bar__trade__on " >
+                    <div class="exchange__nav__bar__trade " >
                         <div class="exchange__nav__bar__hover">
                             <a href="./exchange.html" class="exchange__nav__bar__hover__link exchange__nav__bar__hover__link__on">Trade</a>
                         </div>
@@ -165,7 +165,6 @@
                                                     <!--SWAP-->
      <section class="swap__container">
         <article class="swap" >
-
             <div class="swap__top">
                 <div class="swap__top__dirrection">
                     <div>
@@ -238,11 +237,12 @@
         </div>
         <img src="../img/charizard-help.png" alt="" class="help__img">
     </div>
-    <h1 class="jere">jere</h1>
     <footer class="footer__none">
         
         <section class="exchange__footer">
-            <a href="../index.html" class="exchange__footer__a" ><img src="../img/PokeDEX.png" alt="" class="exchange__footer__a__img" ></a>
+            <a href="../index.html" class="exchange__footer__a" >
+                <img src="../img/PokeDEX.png" alt="" class="exchange__footer__a__img" >
+            </a>
             <div class="exchange__footer__strategic">
                 <h3 class="exchange__footer__strategic__text">Strategic Partner</h3>
                 <img src="../img/CoderHouse.png" alt=""  class="exchange__footer__strategic__img">
@@ -253,7 +253,6 @@
                 </div>
             </div>
         </section>
-
-</footer>
+    </footer>
 </body>
 </html>
