--- a/menu/liquidity.html
+++ b/menu/liquidity.html
@@ -194,9 +194,27 @@
         </article>
      </section>
      <div class="liquidity__pikachu__trader">
-         <a href="./info.html" class="liquidity__pikachu__trader__globo"><img src="../img/globo.png" alt="" class="liquidity__pikachu__trader__globo__img"></a>
+         <a href="./info.html" class="liquidity__pikachu__trader__globo" >
+             <img src="../img/globo.png" alt="" class="liquidity__pikachu__trader__globo__img" >
+        </a>
         <img src="../img/pikachu-r-gante.jpg" alt="" class="liquidity__pikachu__trader__img">
     </div>
     
+    <footer class="footer__none">
+        <section class="liquidity__footer">
+            <a href="../index.html" class="liquidity__footer__a" >
+                <img src="../img/PokeDEX.png" alt="" class="liquidity__footer__a__img" >
+            </a>
+            <div class="liquidity__footer__strategic">
+                <h3 class="liquidity__footer__strategic__text">Strategic Partner</h3>
+                <img src="../img/CoderHouse.png" alt=""  class="liquidity__footer__strategic__img">
+            </div>
+            <div class="liquidity__footer__social">
+                <h3 class="liquidity__footer__social__text">Social</h3>
+                <div class="">
+                </div>
+            </div>
+        </section>
+    </footer>
 </body>
 </html>
