mas problemas con npm

--- a/menu/exchange.html
+++ b/menu/exchange.html
@@ -12,117 +12,116 @@
     <title>Document</title>
 </head>
 <body class="background__container__exchange"> 
-     <header >
-         <nav class="header__nav" >
-            <section class="exchange__nav">
-                <div class="exchange__nav__bar">
+    <header>
+        <nav class="header__nav" >
+            <section class="nav bg-white">
+                <div class="nav__bar">
                     <div >
-                        <a href="../Index.html" class="exchange__nav__bar__logo">
-                            <img src="../img/pokebola.png" alt="" class="exchange__nav__bar__logo__img">
-                            <div class="exchange__nav__bar__logo__pokedex">PokéDEX</div>
+                        <a href="../Index.html" class="nav__bar__logo">
+                            <img src="../img/pokebola.png" alt="" class="nav__bar__logo__img">
+                            <div class="nav__bar__logo__pokedex">PokéDEX</div>
                         </a>
                     </div>
-                    <div class="exchange__nav__bar__trade " >
-                        <div class="exchange__nav__bar__hover">
-                            <a href="./exchange.html" class="exchange__nav__bar__hover__link exchange__nav__bar__hover__link__on">Trade</a>
+                    <div class="nav__bar__trade nav__bar__trade__on " >
+                        <div class="nav__bar__hover">
+                            <a href="./exchange.html" class="nav__bar__hover__link red ">Trade</a>
                         </div>
-                        <div class="exchange__nav__bar__dropdown">
-                            <div class="exchange__nav__bar__dropdown__div__top">
-                                <a href="./exchange.html"  class="exchange__nav__bar__dropdown__link">Exchange</a>
+                        <div class="nav__bar__dropdown">
+                            <div class="nav__bar__dropdown__div__top">
+                                <a href="./exchange.html"  class="nav__bar__dropdown__link">Exchange</a>
                             </div>
-                            <div class="exchange__nav__bar__dropdown__div__bot">
-                                <a href="./liquidity.html" class="exchange__nav__bar__dropdown__link">Liquidity</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="exchange__nav__bar__trade exchange__nav__bar__trade__on " >
-                        <div class="exchange__nav__bar__hover">
-                            <a href="./farm.html" class="exchange__nav__bar__hover__link">Earn</a>
-                        </div>
-                        <div class="exchange__nav__bar__dropdown">
-                            <div class="exchange__nav__bar__dropdown__div__top">
-                                <a href="./farm.html"  class="exchange__nav__bar__dropdown__link">Farms</a>
-                            </div>
-                            <div class="exchange__nav__bar__dropdown__div__bot">
-                                <a href="./pool.html" class="exchange__nav__bar__dropdown__link">Pools</a>
+                            <div class="nav__bar__dropdown__div__bot">
+                                <a href="./liquidity.html" class="nav__bar__dropdown__link">Liquidity</a>
                             </div>
                         </div>
                     </div>
-                    <div class="exchange__nav__bar__nft">
-                        <div class="exchange__nav__bar__hover">NFTs</div>
+                    <div class="nav__bar__trade nav__bar__trade__on " >
+                        <div class="nav__bar__hover">
+                            <a href="./farm.html" class="nav__bar__hover__link">Earn</a>
+                        </div>
+                        <div class="nav__bar__dropdown">
+                            <div class="nav__bar__dropdown__div__top">
+                                <a href="./farm.html"  class="nav__bar__dropdown__link">Farms</a>
+                            </div>
+                            <div class="nav__bar__dropdown__div__bot">
+                                <a href="./pool.html" class="nav__bar__dropdown__link">Pools</a>
+                            </div>
+                        </div>
                     </div>
-                    <div class="exchange__nav__bar__info"> 
-                        <div class="exchange__nav__bar__hover">info</div>
+                    <div class="nav__bar__nft">
+                        <div class="nav__bar__hover">NFTs</div>
+                    </div>
+                    <div class="nav__bar__info"> 
+                        <div class="nav__bar__hover">info</div>
                     </div>
                 </div>
-                <div class="exchange__nav__bar">
+                <div class="nav__bar">
                     <div class="language">
-                            <span class="material-icons-outlined exchange__nav__bar__language">
+                            <span class="material-icons-outlined nav__bar__language red">
                             language
                             </span>
-                       <div class="language__dropdown">
-                           <div class="language__dropdown__text">English</div>
-                           <div class="language__dropdown__text">Español</div>
-                           <div class="language__dropdown__text">Deutsch</div>
-                           <div class="language__dropdown__text">Italiano</div>
-                           <div class="language__dropdown__text">Portugues</div>
-                           <div class="language__dropdown__text">Nederlands</div>
+                       <div class="language__dropdown bg-white">
+                           <div class="language__dropdown__text bg-white">English</div>
+                           <div class="language__dropdown__text bg-white">Español</div>
+                           <div class="language__dropdown__text bg-white">Deutsch</div>
+                           <div class="language__dropdown__text bg-white">Italiano</div>
+                           <div class="language__dropdown__text bg-white">Portugues</div>
+                           <div class="language__dropdown__text bg-white">Nederlands</div>
                        </div>
                     </div>
                     <div>
-                        <span class="material-icons-outlined exchange__nav__bar__settings">
+                        <span class="material-icons-outlined nav__bar__settings red">
                             settings
                             </span>
                     </div>
-                    <div class="exchange__nav__bar__wallet">
-                        <button onclick="document.getElementById('walle').style.display='block'" class="exchange__nav__bar__wallet__button">Connect Wallet</button>
+                    <div class="nav__bar__wallet">
+                        <button onclick="document.getElementById('walle').style.display='block'" class="nav__bar__wallet__button bg-red">Connect Wallet</button>
                     </div>
                 </div>
     
             </section>
-         </nav>                                
-          <!--Navbar mobile-->
-         <section>
-            <article class="mobile">
-                <div class="exchange__nav__mobile">
-                    <a href="./exchange.html" class="exchange__nav__mobile__container exchange__nav__mobile__container__on">
+         </nav>
+         <section class="header__nav__mobile">
+                                   <!--Navbar mobile-->
+                <article class="mobile">
+                <div class="nav__mobile bg-white">
+                    <a href="./exchange.html" class="nav__mobile__container red">
                         <span class="material-icons-outlined">
                             currency_exchange
                             </span>
-                        <div class="exchange__nav__mobile__container__text">Trade</div>
+                        <div class="nav__mobile__container__text">Trade</div>
                     </a>
-                    <a href="./farm.html" class="exchange__nav__mobile__container">
+                    <a href="./farm.html" class="nav__mobile__container">
                         <span class="material-icons-outlined">
                             agriculture
                             </span>
-                        <div class="exchange__nav__mobile__container__text">Farms</div>
+                        <div class="nav__mobile__container__text">Farms</div>
                     </a>
-                    <a href="./pool.html" class="exchange__nav__mobile__container">
+                    <a href="./pool.html" class="nav__mobile__container">
                         <span class="material-icons-outlined">
                             pool
                             </span>
-                        <div class="exchange__nav__mobile__container__text">Pools</div>
+                        <div class="nav__mobile__container__text">Pools</div>
                     </a>
-                    <a href="./nft.html" class="exchange__nav__mobile__container">
+                    <a href="./nft.html" class="nav__mobile__container">
                         <span class="material-icons-outlined">
                             catching_pokemon
                             </span>
-                        <div class="exchange__nav__mobile__container__text">NFT</div>
+                        <div class="nav__mobile__container__text">NFT</div>
                     </a>
-                    <a href="./info.html" class="exchange__nav__mobile__container">
+                    <a href="./info.html" class="nav__mobile__container">
                         <span class="material-icons-outlined">
                             more_horiz
                             </span>
-                        <div class="exchange__nav__mobile__container__text">Info</div>
+                        <div class="nav__mobile__container__text">Info</div>
                     </a>
                 </div>
-            </article>
+                </article>
          </section>
      </header>
-     <br>
-     <article class="exchange__subnav">
-        <h2 class="exchange__subnav__h2" ><a href="./exchange.html" class="exchange__subnav__link exchange__subnav__link__on">Swap</a></h2>
-        <h2 class="exchange__subnav__h2"><a href="./liquidity.html" class="exchange__subnav__link">Liquidity</a></h2>
+     <article class="subnav bg-white" style="margin-top: 0;">
+        <h2 class="subnav__h2" ><a href="./exchange.html" class="subnav__link   subnav__link__on red red-b">Swap</a></h2>
+        <h2 class="subnav__h2"><a href="./liquidity.html" class="subnav__link">Liquidity</a></h2>
     </article>
     <!--Wallet-->
      <section class="exchange__wallet" id="walle" >
