--- a/menu/exchange.html
+++ b/menu/exchange.html
@@ -124,39 +124,39 @@
         <h2 class="subnav__h2"><a href="./liquidity.html" class="subnav__link">Liquidity</a></h2>
     </article>
     <!--Wallet-->
-     <section class="exchange__wallet" id="walle" >
-        <article class="exchange__wallet__fondo">
-           <div class="exchange__wallet__container" >
-            <div class="exchange__wallet__encabezado">
-                <div class="exchange__wallet__encabezado__connect" >Connect Wallet</div>
-                <span class="material-icons-outlined exchange__wallet__encabezado__close" onclick="document.getElementById('walle').style.display='none'">
+     <section class="wallet" id="walle" >
+        <article class="wallet__fondo">
+           <div class="wallet__container bg-red-ligth" >
+            <div class="wallet__encabezado bg-red">
+                <div class="wallet__encabezado__connect" >Connect Wallet</div>
+                <span class="material-icons-outlined wallet__encabezado__close" onclick="document.getElementById('walle').style.display='none'">
                     close
                     </span>
             </div>
             <!--grid-->
-            <div class="exchange__wallet__grid">
-                <div class="exchange__wallet__grid__item">
-                    <img src="../img/metamask.png" alt="" class="exchange__wallet__grid__item__img">
-                    <div class="exchange__wallet__grid__item__text">Metamask</div>
+            <div class="wallet__grid">
+                <div class="wallet__grid__item">
+                    <img src="../img/metamask.png" alt="" class="wallet__grid__item__img">
+                    <div class="wallet__grid__item__text">Metamask</div>
                 </div>
-                <div class="exchange__wallet__grid__item">
-                    <img src="../img/walletbnb.png" alt="" class="exchange__wallet__grid__item__img">
-                    <div class="exchange__wallet__grid__item__text">Binance Wallet</div>
+                <div class="wallet__grid__item">
+                    <img src="../img/walletbnb.png" alt="" class="wallet__grid__item__img">
+                    <div class="wallet__grid__item__text">Binance Wallet</div>
                 </div>
-                <div class="exchange__wallet__grid__item">
-                    <img src="../img/coinbase.png" alt="" class="exchange__wallet__grid__item__img">
-                    <div class="exchange__wallet__grid__item__text">Coinbase Wallet</div>
+                <div class="wallet__grid__item">
+                    <img src="../img/coinbase.png" alt="" class="wallet__grid__item__img">
+                    <div class="wallet__grid__item__text">Coinbase Wallet</div>
                 </div>
-                <div class="exchange__wallet__grid__item exchange__wallet__grid__item__more">
+                <div class="wallet__grid__item wallet__grid__item__more">
                     <span class="material-icons-outlined">
                         more_horiz
                         </span>
-                    <div class="exchange__wallet__grid__item__text exchange__wallet__grid__item__more__text">More</div>
+                    <div class="wallet__grid__item__text wallet__grid__item__more__text">More</div>
                 </div>
             </div>
-            <div class="exchange__wallet__bot">
-                <div class="exchange__wallet__bot__text">Haven’t got a crypto wallet yet?</div>
-                <div class="exchange__wallet__bot__text"><button class="exchange__wallet__bot__button">Learn How to Connect</button></div>
+            <div class="wallet__bot">
+                <div class="wallet__bot__text">Haven’t got a crypto wallet yet?</div>
+                <div class="wallet__bot__text"><button class="wallet__bot__button bg-red">Learn How to Connect</button></div>
             </div>
            </div>
         </article>
@@ -236,18 +236,17 @@
         </div>
         <img src="../img/charizard-help.png" alt="" class="help__img">
     </div>
-    <footer class="footer__none">
-        
-        <section class="exchange__footer">
-            <a href="../index.html" class="exchange__footer__a" >
-                <img src="../img/PokeDEX.png" alt="" class="exchange__footer__a__img" >
+    <footer class="footer__none bg-red">    
+        <section class="footer">
+            <a href="../index.html" class="footer__a" >
+                <img src="../img/PokeDEX.png" alt="" class="footer__a__img" >
             </a>
-            <div class="exchange__footer__strategic">
-                <h3 class="exchange__footer__strategic__text">Strategic Partner</h3>
-                <img src="../img/CoderHouse.png" alt=""  class="exchange__footer__strategic__img">
+            <div class="footer__strategic">
+                <h3 class="footer__strategic__text">Strategic Partner</h3>
+                <img src="../img/CoderHouse.png" alt=""  class="footer__strategic__img">
             </div>
-            <div class="exchange__footer__social">
-                <h3 class="exchange__footer__social__text">Social</h3>
+            <div class="footer__social">
+                <h3 class="footer__social__text">Social</h3>
                 <div class="">
                 </div>
             </div>
