--- a/menu/farm.html
+++ b/menu/farm.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Material+Icons+Outlined">
     <title>Document</title>
 </head>
-<body class="background__container__liquidity"> 
+<body class="background__container__farm"> 
      <header>
         <nav class="header__nav" >
             <section class="nav bg-white">
@@ -24,7 +24,7 @@
                     </div>
                     <div class="nav__bar__trade nav__bar__trade__on " >
                         <div class="nav__bar__hover">
-                            <a href="./exchange.html" class="nav__bar__hover__link green ">Trade</a>
+                            <a href="./exchange.html" class="nav__bar__hover__link  ">Trade</a>
                         </div>
                         <div class="nav__bar__dropdown">
                             <div class="nav__bar__dropdown__div__top">
@@ -37,7 +37,7 @@
                     </div>
                     <div class="nav__bar__trade nav__bar__trade__on " >
                         <div class="nav__bar__hover">
-                            <a href="./farm.html" class="nav__bar__hover__link">Earn</a>
+                            <a href="./farm.html" class="nav__bar__hover__link green">Earn</a>
                         </div>
                         <div class="nav__bar__dropdown">
                             <div class="nav__bar__dropdown__div__top">
@@ -120,8 +120,80 @@
          </section>
      </header>
      <article class="subnav bg-white" style="margin-top: 0;">
-        <h2 class="subnav__h2" ><a href="./exchange.html" class="subnav__link   subnav__link__on green green-b">Swap</a></h2>
-        <h2 class="subnav__h2"><a href="./liquidity.html" class="subnav__link">Liquidity</a></h2>
+        <h2 class="subnav__h2" ><a href="./farm.html" class="subnav__link   subnav__link__on green green-b">Farms</a></h2>
+        <h2 class="subnav__h2"><a href="./pool.html" class="subnav__link">Pools</a></h2>
     </article>
+     <!--Wallet-->
+     <section class="wallet" id="walle" >
+        <article class="wallet__fondo">
+           <div class="wallet__container bg-green-ligth" >
+            <div class="wallet__encabezado bg-green">
+                <div class="wallet__encabezado__connect" >Connect Wallet</div>
+                <span class="material-icons-outlined wallet__encabezado__close" onclick="document.getElementById('walle').style.display='none'">
+                    close
+                    </span>
+            </div>
+            <!--grid-->
+            <div class="wallet__grid">
+                <div class="wallet__grid__item">
+                    <img src="../img/metamask.png" alt="" class="wallet__grid__item__img">
+                    <div class="wallet__grid__item__text">Metamask</div>
+                </div>
+                <div class="wallet__grid__item">
+                    <img src="../img/walletbnb.png" alt="" class="wallet__grid__item__img">
+                    <div class="wallet__grid__item__text">Binance Wallet</div>
+                </div>
+                <div class="wallet__grid__item">
+                    <img src="../img/coinbase.png" alt="" class="wallet__grid__item__img">
+                    <div class="wallet__grid__item__text">Coinbase Wallet</div>
+                </div>
+                <div class="wallet__grid__item wallet__grid__item__more">
+                    <span class="material-icons-outlined">
+                        more_horiz
+                        </span>
+                    <div class="wallet__grid__item__text wallet__grid__item__more__text">More</div>
+                </div>
+            </div>
+            <div class="wallet__bot">
+                <div class="wallet__bot__text">Haven’t got a crypto wallet yet?</div>
+                <div class="wallet__bot__text"><button class="wallet__bot__button bg-green">Learn How to Connect</button></div>
+            </div>
+           </div>
+        </article>
+     </section>
+     <section class="farm__titulo bg-green-ligth">
+         <div class="farm__titulo__left">
+            <h1 class="green">Farms</h1>
+            <div>Stake LP tokens to earn.</div>
+         </div>
+         <div class="farm__titulo__rigth">
+             <img src="../img/chikorita.png" alt="" class="farm__titulo__rigth__img">
+         </div>
+     </section>
+     <br><br><br><br><br><br>
+     <br><br><br><br><br><br>
+     <br><br><br><br><br><br>
+     <br><br><br><br><br><br>
+     <br><br><br><br><br><br>
+     <br><br><br><br><br><br>
+
+
+
+     <footer class="footer__none bg-green">    
+        <section class="footer">
+            <a href="../index.html" class="footer__a" >
+                <img src="../img/PokeDEX.png" alt="" class="footer__a__img" >
+            </a>
+            <div class="footer__strategic">
+                <h3 class="footer__strategic__text">Strategic Partner</h3>
+                <img src="../img/CoderHouse.png" alt=""  class="footer__strategic__img">
+            </div>
+            <div class="footer__social">
+                <h3 class="footer__social__text">Social</h3>
+                <div class="">
+                </div>
+            </div>
+        </section>
+    </footer>
 </body>
 </html>
