--- a/menu/liquidity.html
+++ b/menu/liquidity.html
@@ -123,40 +123,40 @@
         <h2 class="subnav__h2" ><a href="./exchange.html" class="subnav__link   subnav__link__on yellow yellow-b">Swap</a></h2>
         <h2 class="subnav__h2"><a href="./liquidity.html" class="subnav__link">Liquidity</a></h2>
     </article>
-    <!--Wallet-->
-     <section class="liquidity__wallet" id="walle" >
-        <article class="liquidity__wallet__fondo">
-           <div class="liquidity__wallet__container" >
-            <div class="liquidity__wallet__encabezado">
-                <div class="liquidity__wallet__encabezado__connect" >Connect Wallet</div>
-                <span class="material-icons-outlined liquidity__wallet__encabezado__close" onclick="document.getElementById('walle').style.display='none'">
+     <!--Wallet-->
+     <section class="wallet" id="walle" >
+        <article class="wallet__fondo">
+           <div class="wallet__container bg-yellow-ligth" >
+            <div class="wallet__encabezado bg-yellow">
+                <div class="wallet__encabezado__connect" >Connect Wallet</div>
+                <span class="material-icons-outlined wallet__encabezado__close" onclick="document.getElementById('walle').style.display='none'">
                     close
                     </span>
             </div>
             <!--grid-->
-            <div class="liquidity__wallet__grid">
-                <div class="liquidity__wallet__grid__item">
-                    <img src="../img/metamask.png" alt="" class="liquidity__wallet__grid__item__img">
-                    <div class="liquidity__wallet__grid__item__text">Metamask</div>
+            <div class="wallet__grid">
+                <div class="wallet__grid__item">
+                    <img src="../img/metamask.png" alt="" class="wallet__grid__item__img">
+                    <div class="wallet__grid__item__text">Metamask</div>
                 </div>
-                <div class="liquidity__wallet__grid__item">
-                    <img src="../img/walletbnb.png" alt="" class="liquidity__wallet__grid__item__img">
-                    <div class="liquidity__wallet__grid__item__text">Binance Wallet</div>
+                <div class="wallet__grid__item">
+                    <img src="../img/walletbnb.png" alt="" class="wallet__grid__item__img">
+                    <div class="wallet__grid__item__text">Binance Wallet</div>
                 </div>
-                <div class="liquidity__wallet__grid__item">
-                    <img src="../img/coinbase.png" alt="" class="liquidity__wallet__grid__item__img">
-                    <div class="liquidity__wallet__grid__item__text">Coinbase Wallet</div>
+                <div class="wallet__grid__item">
+                    <img src="../img/coinbase.png" alt="" class="wallet__grid__item__img">
+                    <div class="wallet__grid__item__text">Coinbase Wallet</div>
                 </div>
-                <div class="liquidity__wallet__grid__item liquidity__wallet__grid__item__more">
+                <div class="wallet__grid__item wallet__grid__item__more">
                     <span class="material-icons-outlined">
                         more_horiz
                         </span>
-                    <div class="liquidity__wallet__grid__item__text liquidity__wallet__grid__item__more__text">More</div>
+                    <div class="wallet__grid__item__text wallet__grid__item__more__text">More</div>
                 </div>
             </div>
-            <div class="liquidity__wallet__bot">
-                <div class="liquidity__wallet__bot__text">Haven’t got a crypto wallet yet?</div>
-                <div class="liquidity__wallet__bot__text"><button class="liquidity__wallet__bot__button">Learn How to Connect</button></div>
+            <div class="wallet__bot">
+                <div class="wallet__bot__text">Haven’t got a crypto wallet yet?</div>
+                <div class="wallet__bot__text"><button class="wallet__bot__button bg-yellow">Learn How to Connect</button></div>
             </div>
            </div>
         </article>
@@ -199,17 +199,17 @@
         <img src="../img/pikachu-r-gante.jpg" alt="" class="liquidity__pikachu__trader__img">
     </div>
     
-    <footer class="footer__none">
-        <section class="liquidity__footer">
-            <a href="../index.html" class="liquidity__footer__a" >
-                <img src="../img/PokeDEX.png" alt="" class="liquidity__footer__a__img" >
+    <footer class="footer__none bg-yellow">    
+        <section class="footer">
+            <a href="../index.html" class="footer__a" >
+                <img src="../img/PokeDEX.png" alt="" class="footer__a__img" >
             </a>
-            <div class="liquidity__footer__strategic">
-                <h3 class="liquidity__footer__strategic__text">Strategic Partner</h3>
-                <img src="../img/CoderHouse.png" alt=""  class="liquidity__footer__strategic__img">
+            <div class="footer__strategic">
+                <h3 class="footer__strategic__text">Strategic Partner</h3>
+                <img src="../img/CoderHouse.png" alt=""  class="footer__strategic__img">
             </div>
-            <div class="liquidity__footer__social">
-                <h3 class="liquidity__footer__social__text">Social</h3>
+            <div class="footer__social">
+                <h3 class="footer__social__text">Social</h3>
                 <div class="">
                 </div>
             </div>
