comienzo del grid farm

--- a/menu/farm.html
+++ b/menu/farm.html
@@ -166,9 +166,45 @@
             <h1 class="green">Farms</h1>
             <div>Stake LP tokens to earn.</div>
          </div>
-         <div class="farm__titulo__rigth">
-             <img src="../img/chikorita.png" alt="" class="farm__titulo__rigth__img">
-         </div>
+             <img src="../img/chikorita.png" alt="" class="farm__titulo__img">
+     </section>
+     <section class="farm__container">
+         <article class="farm__container__top">
+             <div class="farm__container__top__left">
+                 <div>
+                    <span class="material-icons-outlined green">
+                        grid_view
+                        </span>
+                 </div>
+                 <div>
+                    <span class="material-icons-outlined">
+                        format_list_bulleted
+                        </span>
+                 </div>
+                 <div>
+                    <span class="material-icons-outlined" style="font-size: 1.5rem;">
+                        toggle_off
+                        </span>
+                 </div>
+                 <div>Inversion Unica</div>
+                 <div class="farm__container__top__left__live__finished bg-green-ligth">
+                     <span class="farm__container__top__left__live__finished__on bg-green">Live</span>
+                     <span style="margin-left: 3px;">Finished</span>
+                 </div>
+             </div>
+             <div class="farm__container__top__rigth">
+                 <div class="farm__container__top__rigth__item">
+                     <div>SORT BY</div>
+                     <select name="" id="" style="width: 168px;" class="farm__container__top__rigth__item__select bg-green-ligth">
+                         <option >Hot</option>
+                     </select>
+                 </div>
+                 <div class="farm__container__top__rigth__item">
+                    <div>Search</div>
+                    <input type="text" value="Search Farms" class="farm__container__top__rigth__item__select bg-green-ligth">
+                </div>
+             </div>
+         </article>
      </section>
      <br><br><br><br><br><br>
      <br><br><br><br><br><br>
