--- a/menu/pool.html
+++ b/menu/pool.html
@@ -166,9 +166,7 @@
            <h1 class="blue">Farms</h1>
            <div>Stake LP tokens to earn.</div>
         </div>
-        <div class="farm__titulo__rigth">
-            <img src="../img/lapras.png" alt="" class="farm__titulo__rigth__img">
-        </div>
+            <img src="../img/lapras.png" alt="" class="farm__titulo__img">
     </section>
      <footer class="footer__none bg-blue">    
         <section class="footer">
