pre entrega desafo

--- a/menu/exchange.html
+++ b/menu/exchange.html
@@ -49,10 +49,10 @@
                         </div>
                     </div>
                     <div class="nav__bar__nft">
-                        <div class="nav__bar__hover">NFTs</div>
+                        <div class="nav__bar__hover"><a href="./nft.html" style="text-decoration: none; color: black;">NFTs</a></div>
                     </div>
                     <div class="nav__bar__info"> 
-                        <div class="nav__bar__hover">info</div>
+                        <div class="nav__bar__hover"><a href="./info.html" style="text-decoration: none; color: black;">info</a></div>
                     </div>
                 </div>
                 <div class="nav__bar">
@@ -230,6 +230,9 @@
         </article>
     </section>
                                                     <!--Fin SWAP-->
+    <h1 class="aitor">jeremias oyhamburo</h1>
+
+
     <div class="help">
         <div>
             <a href="../menu/info.html" style="text-decoration: none;"><span class="help__text">help?</span></a>
