--- a/menu/liquidity.html
+++ b/menu/liquidity.html
@@ -49,10 +49,10 @@
                         </div>
                     </div>
                     <div class="nav__bar__nft">
-                        <div class="nav__bar__hover">NFTs</div>
+                        <div class="nav__bar__hover"><a href="./nft.html" style="text-decoration: none; color: black;">NFTs</a></div>
                     </div>
                     <div class="nav__bar__info"> 
-                        <div class="nav__bar__hover">info</div>
+                        <div class="nav__bar__hover"><a href="./info.html" style="text-decoration: none; color: black;">info</a></div>
                     </div>
                 </div>
                 <div class="nav__bar">
@@ -120,8 +120,8 @@
          </section>
      </header>
      <article class="subnav bg-white" style="margin-top: 0;">
-        <h2 class="subnav__h2" ><a href="./exchange.html" class="subnav__link   subnav__link__on yellow yellow-b">Swap</a></h2>
-        <h2 class="subnav__h2"><a href="./liquidity.html" class="subnav__link">Liquidity</a></h2>
+        <h2 class="subnav__h2" ><a href="./exchange.html" class="subnav__link   subnav__link__on ">Swap</a></h2>
+        <h2 class="subnav__h2"><a href="./liquidity.html" class="subnav__link yellow yellow-b">Liquidity</a></h2>
     </article>
      <!--Wallet-->
      <section class="wallet" id="walle" >
