--- a/menu/info.html
+++ b/menu/info.html
@@ -11,71 +11,71 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Material+Icons+Outlined">
     <title>Document</title>
 </head>
-<body class="background__container__liquidity"> 
+<body class="background__container__pool"> 
      <header>
         <nav class="header__nav" >
-            <section class="liquidity__nav">
-                <div class="liquidity__nav__bar">
+            <section class="nav bg-white">
+                <div class="nav__bar">
                     <div >
-                        <a href="../Index.html" class="liquidity__nav__bar__logo">
-                            <img src="../img/pokebola.png" alt="" class="liquidity__nav__bar__logo__img">
-                            <div class="liquidity__nav__bar__logo__pokedex">PokéDEX</div>
+                        <a href="../Index.html" class="nav__bar__logo">
+                            <img src="../img/pokebola.png" alt="" class="nav__bar__logo__img">
+                            <div class="nav__bar__logo__pokedex">PokéDEX</div>
                         </a>
                     </div>
-                    <div class="liquidity__nav__bar__trade liquidity__nav__bar__trade__on " >
-                        <div class="liquidity__nav__bar__hover">
-                            <a href="./exchange.html" class="liquidity__nav__bar__hover__link liquidity__nav__bar__hover__link__on">Trade</a>
+                    <div class="nav__bar__trade nav__bar__trade__on " >
+                        <div class="nav__bar__hover">
+                            <a href="./exchange.html" class="nav__bar__hover__link  ">Trade</a>
                         </div>
-                        <div class="liquidity__nav__bar__dropdown">
-                            <div class="liquidity__nav__bar__dropdown__div__top">
-                                <a href="./exchange.html"  class="liquidity__nav__bar__dropdown__link">Exchange</a>
+                        <div class="nav__bar__dropdown">
+                            <div class="nav__bar__dropdown__div__top">
+                                <a href="./exchange.html"  class="nav__bar__dropdown__link">Exchange</a>
                             </div>
-                            <div class="liquidity__nav__bar__dropdown__div__bot">
-                                <a href="./liquidity.html" class="liquidity__nav__bar__dropdown__link">Liquidity</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="liquidity__nav__bar__trade liquidity__nav__bar__trade__on " >
-                        <div class="liquidity__nav__bar__hover">
-                            <a href="./farm.html" class="liquidity__nav__bar__hover__link">Earn</a>
-                        </div>
-                        <div class="liquidity__nav__bar__dropdown">
-                            <div class="liquidity__nav__bar__dropdown__div__top">
-                                <a href="./farm.html"  class="liquidity__nav__bar__dropdown__link">Farms</a>
-                            </div>
-                            <div class="liquidity__nav__bar__dropdown__div__bot">
-                                <a href="./pool.html" class="liquidity__nav__bar__dropdown__link">Pools</a>
+                            <div class="nav__bar__dropdown__div__bot">
+                                <a href="./liquidity.html" class="nav__bar__dropdown__link">Liquidity</a>
                             </div>
                         </div>
                     </div>
-                    <div class="liquidity__nav__bar__nft">
-                        <div class="liquidity__nav__bar__hover">NFTs</div>
+                    <div class="nav__bar__trade nav__bar__trade__on " >
+                        <div class="nav__bar__hover">
+                            <a href="./farm.html" class="nav__bar__hover__link blue">Earn</a>
+                        </div>
+                        <div class="nav__bar__dropdown">
+                            <div class="nav__bar__dropdown__div__top">
+                                <a href="./farm.html"  class="nav__bar__dropdown__link">Farms</a>
+                            </div>
+                            <div class="nav__bar__dropdown__div__bot">
+                                <a href="./pool.html" class="nav__bar__dropdown__link">Pools</a>
+                            </div>
+                        </div>
                     </div>
-                    <div class="liquidity__nav__bar__info"> 
-                        <div class="liquidity__nav__bar__hover">info</div>
+                    <div class="nav__bar__nft">
+                        <div class="nav__bar__hover"><a href="./nft.html" style="text-decoration: none; color: black;">NFTs</a></div>
+                    </div>
+                    <div class="nav__bar__info"> 
+                        <div class="nav__bar__hover"><a href="./info.html" style="text-decoration: none; color: black;">info</a></div>
                     </div>
                 </div>
-                <div class="liquidity__nav__bar">
+                <div class="nav__bar">
                     <div class="language">
-                            <span class="material-icons-outlined liquidity__nav__bar__language">
+                            <span class="material-icons-outlined nav__bar__language blue">
                             language
                             </span>
-                       <div class="language__dropdown">
-                           <div class="language__dropdown__text">English</div>
-                           <div class="language__dropdown__text">Español</div>
-                           <div class="language__dropdown__text">Deutsch</div>
-                           <div class="language__dropdown__text">Italiano</div>
-                           <div class="language__dropdown__text">Portugues</div>
-                           <div class="language__dropdown__text">Nederlands</div>
+                       <div class="language__dropdown bg-white">
+                           <div class="language__dropdown__text bg-white">English</div>
+                           <div class="language__dropdown__text bg-white">Español</div>
+                           <div class="language__dropdown__text bg-white">Deutsch</div>
+                           <div class="language__dropdown__text bg-white">Italiano</div>
+                           <div class="language__dropdown__text bg-white">Portugues</div>
+                           <div class="language__dropdown__text bg-white">Nederlands</div>
                        </div>
                     </div>
                     <div>
-                        <span class="material-icons-outlined liquidity__nav__bar__settings">
+                        <span class="material-icons-outlined nav__bar__settings blue">
                             settings
                             </span>
                     </div>
-                    <div class="liquidity__nav__bar__wallet">
-                        <button onclick="document.getElementById('walle').style.display='block'" class="liquidity__nav__bar__wallet__button">Connect Wallet</button>
+                    <div class="nav__bar__wallet">
+                        <button onclick="document.getElementById('walle').style.display='block'" class="nav__bar__wallet__button bg-blue">Connect Wallet</button>
                     </div>
                 </div>
     
@@ -84,40 +84,83 @@
          <section class="header__nav__mobile">
                                    <!--Navbar mobile-->
                 <article class="mobile">
-                <div class="liquidity__nav__mobile">
-                    <a href="./exchange.html" class="liquidity__nav__mobile__container liquidity__nav__mobile__container__on">
+                <div class="nav__mobile bg-white">
+                    <a href="./exchange.html" class="nav__mobile__container blue">
                         <span class="material-icons-outlined">
                             currency_exchange
                             </span>
-                        <div class="liquidity__nav__mobile__container__text">Trade</div>
+                        <div class="nav__mobile__container__text">Trade</div>
                     </a>
-                    <a href="./farm.html" class="liquidity__nav__mobile__container">
+                    <a href="./farm.html" class="nav__mobile__container">
                         <span class="material-icons-outlined">
                             agriculture
                             </span>
-                        <div class="liquidity__nav__mobile__container__text">Farms</div>
+                        <div class="nav__mobile__container__text">Farms</div>
                     </a>
-                    <a href="./pool.html" class="liquidity__nav__mobile__container">
+                    <a href="./pool.html" class="nav__mobile__container">
                         <span class="material-icons-outlined">
                             pool
                             </span>
-                        <div class="liquidity__nav__mobile__container__text">Pools</div>
+                        <div class="nav__mobile__container__text">Pools</div>
                     </a>
-                    <a href="./nft.html" class="liquidity__nav__mobile__container">
+                    <a href="./nft.html" class="nav__mobile__container">
                         <span class="material-icons-outlined">
                             catching_pokemon
                             </span>
-                        <div class="liquidity__nav__mobile__container__text">NFT</div>
+                        <div class="nav__mobile__container__text">NFT</div>
                     </a>
-                    <a href="./info.html" class="liquidity__nav__mobile__container">
+                    <a href="./info.html" class="nav__mobile__container">
                         <span class="material-icons-outlined">
                             more_horiz
                             </span>
-                        <div class="liquidity__nav__mobile__container__text">Info</div>
+                        <div class="nav__mobile__container__text">Info</div>
                     </a>
                 </div>
                 </article>
          </section>
      </header>
+
+    <!--Wallet-->
+    <section class="wallet" id="walle" >
+        <article class="wallet__fondo">
+           <div class="wallet__container bg-blue-ligth" >
+            <div class="wallet__encabezado bg-blue">
+                <div class="wallet__encabezado__connect" >Connect Wallet</div>
+                <span class="material-icons-outlined wallet__encabezado__close" onclick="document.getElementById('walle').style.display='none'">
+                    close
+                    </span>
+            </div>
+            <!--grid-->
+            <div class="wallet__grid">
+                <div class="wallet__grid__item">
+                    <img src="../img/metamask.png" alt="" class="wallet__grid__item__img">
+                    <div class="wallet__grid__item__text">Metamask</div>
+                </div>
+                <div class="wallet__grid__item">
+                    <img src="../img/walletbnb.png" alt="" class="wallet__grid__item__img">
+                    <div class="wallet__grid__item__text">Binance Wallet</div>
+                </div>
+                <div class="wallet__grid__item">
+                    <img src="../img/coinbase.png" alt="" class="wallet__grid__item__img">
+                    <div class="wallet__grid__item__text">Coinbase Wallet</div>
+                </div>
+                <div class="wallet__grid__item wallet__grid__item__more">
+                    <span class="material-icons-outlined">
+                        more_horiz
+                        </span>
+                    <div class="wallet__grid__item__text wallet__grid__item__more__text">More</div>
+                </div>
+            </div>
+            <div class="wallet__bot">
+                <div class="wallet__bot__text">Haven’t got a crypto wallet yet?</div>
+                <div class="wallet__bot__text"><button class="wallet__bot__button bg-blue">Learn How to Connect</button></div>
+            </div>
+           </div>
+        </article>
+     </section>
+
+     <img src="../img/torre.png" alt="" >
+
+
 </body>
 </html>
