--- a/menu/pool.html
+++ b/menu/pool.html
@@ -49,10 +49,10 @@
                         </div>
                     </div>
                     <div class="nav__bar__nft">
-                        <div class="nav__bar__hover">NFTs</div>
+                        <div class="nav__bar__hover"><a href="./nft.html" style="text-decoration: none; color: black;">NFTs</a></div>
                     </div>
                     <div class="nav__bar__info"> 
-                        <div class="nav__bar__hover">info</div>
+                        <div class="nav__bar__hover"><a href="./info.html" style="text-decoration: none; color: black;">info</a></div>
                     </div>
                 </div>
                 <div class="nav__bar">
@@ -161,14 +161,337 @@
            </div>
         </article>
      </section>
-     <section class="farm__titulo bg-blue-ligth">
-        <div class="farm__titulo__left">
-           <h1 class="blue">Farms</h1>
-           <div>Stake LP tokens to earn.</div>
+     <section class="pool__titulo bg-blue-ligth">
+        <div class="pool__titulo__left">
+           <h1 class="blue">Syrup Pools</h1>
+           <div style="font-size: 1.6rem;">Just stake some tokens to earn. <br>
+            High APR, low risk.</div>
         </div>
             <img src="../img/lapras.png" alt="" class="farm__titulo__img">
     </section>
-     <footer class="footer__none bg-blue">    
+    <section class="farm__container">
+        <article class="farm__container__top">
+            <div class="farm__container__top__left">
+                <div>
+                   <span class="material-icons-outlined blue">
+                       grid_view
+                       </span>
+                </div>
+                <div>
+                   <span class="material-icons-outlined">
+                       format_list_bulleted
+                       </span>
+                </div>
+                <div>
+                   <span class="material-icons-outlined" style="font-size: 1.5rem;">
+                       toggle_off
+                       </span>
+                </div>
+                <div>Inversion Unica</div>
+                <div class="farm__container__top__left__live__finished bg-blue-ligth">
+                    <span class="farm__container__top__left__live__finished__on bg-blue">Live</span>
+                    <span style="margin-left: 3px;">Finished</span>
+                </div>
+            </div>
+            <div class="farm__container__top__rigth">
+                <div class="farm__container__top__rigth__item">
+                    <div>SORT BY</div>
+                    <select name="" id="" style="width: 168px;" class="farm__container__top__rigth__item__select bg-blue-ligth">
+                        <option >Hot</option>
+                    </select>
+                </div>
+                <div class="farm__container__top__rigth__item">
+                   <div>Search</div>
+                   <input type="text" value="Search Farms" class="farm__container__top__rigth__item__select bg-blue-ligth">
+               </div>
+            </div>
+        </article>
+    </section>
+    <main class="pool__container__flex">
+        <section class="pool__container__grid">
+            <article class="pool__container__grid__item" >
+                <div class="pool__container__grid__item__top bg-blue-ligth">
+                    <div>
+                        <h1 class="pool__container__grid__item__top__h1">Earn TOKEN</h1>
+                        <div>stake ball</div>
+                    </div>
+                    <div>
+                        <img src="../img/pokebola.png" alt="" class="pool__container__grid__item__top__ball">
+                    </div>
+                    <div>
+                        <img src="	https://pancakeswap.finance/images/tokens/0x965F527D9159dCe6288a2219DB51fc6Eef120dD1.svg" alt="" class="pool__container__grid__item__top__img">
+                    </div>
+                </div>
+                <div class="pool__container__grid__item__middle">
+                    <div>APR:</div>
+                    <div class="pool__container__grid__item__middle__p">
+                        <span>34%</span>
+                            <span class="material-icons-outlined">
+                                calculate
+                                </span>
+                    </div>
+                </div>
+                <div class="pool__container__grid__item__middle__bot">
+                        <div class="pool__container__grid__item__middle__bot__text blue">START EARNING</div>
+                        <button class="pool__container__grid__item__middle__bot__btn bg-blue">Connect Wallet</button>
+                </div>
+                <div class="pool__container__grid__item__bot flex">
+                    <div class="pool__container__grid__item__bot__left flex">
+                        <div class="pool__container__grid__item__bot__left__manual flex hover">
+                            <span class="material-icons-outlined">
+                                refresh
+                                </span>
+                            <div>Manual</div>
+                        </div>
+                        <span class="material-icons-outlined hover">
+                            help_outline
+                            </span>
+                    </div>
+                    <div class="pool__container__grid__item__bot__rigth flex hover blue">
+                        <div>Details</div>
+                        <span class="material-icons-outlined">
+                            arrow_drop_down
+                            </span>
+                    </div>
+                </div>
+            </article>
+            <article class="pool__container__grid__item" >
+                <div class="pool__container__grid__item__top bg-blue-ligth">
+                    <div>
+                        <h1 class="pool__container__grid__item__top__h1">Earn TOKEN</h1>
+                        <div>stake ball</div>
+                    </div>
+                    <div>
+                        <img src="../img/pokebola.png" alt="" class="pool__container__grid__item__top__ball">
+                    </div>
+                    <div>
+                        <img src="https://pancakeswap.finance/images/tokens/0x6b23C89196DeB721e6Fd9726E6C76E4810a464bc.svg" alt="" class="pool__container__grid__item__top__img">
+                    </div>
+                </div>
+                <div class="pool__container__grid__item__middle">
+                    <div>APR:</div>
+                    <div class="pool__container__grid__item__middle__p">
+                        <span>34%</span>
+                            <span class="material-icons-outlined">
+                                calculate
+                                </span>
+                    </div>
+                </div>
+                <div class="pool__container__grid__item__middle__bot">
+                        <div class="pool__container__grid__item__middle__bot__text blue">START EARNING</div>
+                        <button class="pool__container__grid__item__middle__bot__btn bg-blue">Connect Wallet</button>
+                </div>
+                <div class="pool__container__grid__item__bot flex">
+                    <div class="pool__container__grid__item__bot__left flex">
+                        <div class="pool__container__grid__item__bot__left__manual flex hover">
+                            <span class="material-icons-outlined">
+                                refresh
+                                </span>
+                            <div>Manual</div>
+                        </div>
+                        <span class="material-icons-outlined hover">
+                            help_outline
+                            </span>
+                    </div>
+                    <div class="pool__container__grid__item__bot__rigth flex hover blue">
+                        <div>Details</div>
+                        <span class="material-icons-outlined">
+                            arrow_drop_down
+                            </span>
+                    </div>
+                </div>
+            </article>
+            <article class="pool__container__grid__item" >
+                <div class="pool__container__grid__item__top bg-blue-ligth">
+                    <div>
+                        <h1 class="pool__container__grid__item__top__h1">Earn TOKEN</h1>
+                        <div>stake ball</div>
+                    </div>
+                    <div>
+                        <img src="../img/pokebola.png" alt="" class="pool__container__grid__item__top__ball">
+                    </div>
+                    <div>
+                        <img src="https://pancakeswap.finance/images/tokens/0x715D400F88C167884bbCc41C5FeA407ed4D2f8A0.svg" alt="" class="pool__container__grid__item__top__img">
+                    </div>
+                </div>
+                <div class="pool__container__grid__item__middle">
+                    <div>APR:</div>
+                    <div class="pool__container__grid__item__middle__p">
+                        <span>34%</span>
+                            <span class="material-icons-outlined">
+                                calculate
+                                </span>
+                    </div>
+                </div>
+                <div class="pool__container__grid__item__middle__bot">
+                        <div class="pool__container__grid__item__middle__bot__text blue">START EARNING</div>
+                        <button class="pool__container__grid__item__middle__bot__btn bg-blue">Connect Wallet</button>
+                </div>
+                <div class="pool__container__grid__item__bot flex">
+                    <div class="pool__container__grid__item__bot__left flex">
+                        <div class="pool__container__grid__item__bot__left__manual flex hover">
+                            <span class="material-icons-outlined">
+                                refresh
+                                </span>
+                            <div>Manual</div>
+                        </div>
+                        <span class="material-icons-outlined hover">
+                            help_outline
+                            </span>
+                    </div>
+                    <div class="pool__container__grid__item__bot__rigth flex hover blue">
+                        <div>Details</div>
+                        <span class="material-icons-outlined">
+                            arrow_drop_down
+                            </span>
+                    </div>
+                </div>
+            </article>
+            <article class="pool__container__grid__item" >
+                <div class="pool__container__grid__item__top bg-blue-ligth">
+                    <div>
+                        <h1 class="pool__container__grid__item__top__h1">Earn TOKEN</h1>
+                        <div>stake ball</div>
+                    </div>
+                    <div>
+                        <img src="../img/pokebola.png" alt="" class="pool__container__grid__item__top__ball">
+                    </div>
+                    <div>
+                        <img src="https://pancakeswap.finance/images/tokens/0x5f4Bde007Dc06b867f86EBFE4802e34A1fFEEd63.svg" alt="" class="pool__container__grid__item__top__img">
+                    </div>
+                </div>
+                <div class="pool__container__grid__item__middle">
+                    <div>APR:</div>
+                    <div class="pool__container__grid__item__middle__p">
+                        <span>34%</span>
+                            <span class="material-icons-outlined">
+                                calculate
+                                </span>
+                    </div>
+                </div>
+                <div class="pool__container__grid__item__middle__bot">
+                        <div class="pool__container__grid__item__middle__bot__text blue">START EARNING</div>
+                        <button class="pool__container__grid__item__middle__bot__btn bg-blue">Connect Wallet</button>
+                </div>
+                <div class="pool__container__grid__item__bot flex">
+                    <div class="pool__container__grid__item__bot__left flex">
+                        <div class="pool__container__grid__item__bot__left__manual flex hover">
+                            <span class="material-icons-outlined">
+                                refresh
+                                </span>
+                            <div>Manual</div>
+                        </div>
+                        <span class="material-icons-outlined hover">
+                            help_outline
+                            </span>
+                    </div>
+                    <div class="pool__container__grid__item__bot__rigth flex hover blue">
+                        <div>Details</div>
+                        <span class="material-icons-outlined">
+                            arrow_drop_down
+                            </span>
+                    </div>
+                </div>
+            </article>
+            <article class="pool__container__grid__item" >
+                <div class="pool__container__grid__item__top bg-blue-ligth">
+                    <div>
+                        <h1 class="pool__container__grid__item__top__h1">Earn TOKEN</h1>
+                        <div>stake ball</div>
+                    </div>
+                    <div>
+                        <img src="../img/pokebola.png" alt="" class="pool__container__grid__item__top__ball">
+                    </div>
+                    <div>
+                        <img src="https://pancakeswap.finance/images/tokens/0x6f9F0c4ad9Af7EbD61Ac5A1D4e0F2227F7B0E5f9.svg" alt="" class="pool__container__grid__item__top__img">
+                    </div>
+                </div>
+                <div class="pool__container__grid__item__middle">
+                    <div>APR:</div>
+                    <div class="pool__container__grid__item__middle__p">
+                        <span>34%</span>
+                            <span class="material-icons-outlined">
+                                calculate
+                                </span>
+                    </div>
+                </div>
+                <div class="pool__container__grid__item__middle__bot">
+                        <div class="pool__container__grid__item__middle__bot__text blue">START EARNING</div>
+                        <button class="pool__container__grid__item__middle__bot__btn bg-blue">Connect Wallet</button>
+                </div>
+                <div class="pool__container__grid__item__bot flex">
+                    <div class="pool__container__grid__item__bot__left flex">
+                        <div class="pool__container__grid__item__bot__left__manual flex hover">
+                            <span class="material-icons-outlined">
+                                refresh
+                                </span>
+                            <div>Manual</div>
+                        </div>
+                        <span class="material-icons-outlined hover">
+                            help_outline
+                            </span>
+                    </div>
+                    <div class="pool__container__grid__item__bot__rigth flex hover blue">
+                        <div>Details</div>
+                        <span class="material-icons-outlined">
+                            arrow_drop_down
+                            </span>
+                    </div>
+                </div>
+            </article>
+            <article class="pool__container__grid__item" >
+                <div class="pool__container__grid__item__top bg-blue-ligth">
+                    <div>
+                        <h1 class="pool__container__grid__item__top__h1">Earn TOKEN</h1>
+                        <div>stake ball</div>
+                    </div>
+                    <div>
+                        <img src="../img/pokebola.png" alt="" class="pool__container__grid__item__top__ball">
+                    </div>
+                    <div>
+                        <img src="https://pancakeswap.finance/images/tokens/0x5f4Bde007Dc06b867f86EBFE4802e34A1fFEEd63.svg" alt="" class="pool__container__grid__item__top__img">
+                    </div>
+                </div>
+                <div class="pool__container__grid__item__middle">
+                    <div>APR:</div>
+                    <div class="pool__container__grid__item__middle__p">
+                        <span>34%</span>
+                            <span class="material-icons-outlined">
+                                calculate
+                                </span>
+                    </div>
+                </div>
+                <div class="pool__container__grid__item__middle__bot">
+                        <div class="pool__container__grid__item__middle__bot__text blue">START EARNING</div>
+                        <button class="pool__container__grid__item__middle__bot__btn bg-blue">Connect Wallet</button>
+                </div>
+                <div class="pool__container__grid__item__bot flex">
+                    <div class="pool__container__grid__item__bot__left flex">
+                        <div class="pool__container__grid__item__bot__left__manual flex hover">
+                            <span class="material-icons-outlined">
+                                refresh
+                                </span>
+                            <div>Manual</div>
+                        </div>
+                        <span class="material-icons-outlined hover">
+                            help_outline
+                            </span>
+                    </div>
+                    <div class="pool__container__grid__item__bot__rigth flex hover blue">
+                        <div>Details</div>
+                        <span class="material-icons-outlined">
+                            arrow_drop_down
+                            </span>
+                    </div>
+                </div>
+            </article>
+        </section>
+    </main>
+    <div class="farm__help">
+        <a href="./info.html" class="hover"><img src="../img/globo-normal.png" alt="" class="farm__help__globo"></a>
+        <img src="../img/squirtle.png" alt="">
+    </div>
+     <footer class="footer__none bg-blue" style="margin-top: 2%;">    
         <section class="footer">
             <a href="../index.html" class="footer__a" >
                 <img src="../img/PokeDEX.png" alt="" class="footer__a__img" >
@@ -184,5 +507,6 @@
             </div>
         </section>
     </footer>
+
 </body>
 </html>
