--- a/menu/nft.html
+++ b/menu/nft.html
@@ -23,7 +23,7 @@
     <div class="recuadro__opt">
         <div>
             <div>
-                <a href="" class="recuadro__opt__collections">Collections</a>
+                <a href="./nft/collection.html" class="recuadro__opt__collections">Collections</a>
             </div>
             <div>
                 <a href="" class="recuadro__opt__lands">Lands</a>
@@ -39,7 +39,6 @@
         <p id="demo"></p>
     </div>
 </button>
-
 
 <article>
 
