doc agregado para desafio

--- a/Index.html
+++ b/Index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Cheaper and faster than Uniswap? Discover PokéDEX, the DEX of the BNB Smart Chain (BSC) trainers with the best DeFi farms.">
+    <meta name="keywords" content="DEFI, DEX, EXCHANGE, CRIPTO, YIELD FARMING, POKEMON, NFT">
     <link rel="stylesheet" href="./css/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -11,9 +13,7 @@
     <title>PokéDEX</title>
 </head>
 <body class="background__container__home">
-  
-  </audio>
-    <section >
+     <section >
         <article class="home">
             <img src="./img/gameboy.png" alt="" class="home__gameboy">
         </article>
