--- a/menu/exchange.html
+++ b/menu/exchange.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Cheaper and faster than Uniswap? Discover PokéDEX, the DEX of the BNB Smart Chain (BSC) trainers with the best DeFi farms.">
+    <meta name="keywords" content="DEFI, DEX, EXCHANGE, CRIPTO, YIELD FARMING, POKEMON, NFT">
     <link rel="stylesheet" href="../css/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kanit&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Material+Icons+Outlined">
-    <title>Document</title>
+    <title>PokéDEX</title>
 </head>
 <body class="background__container__exchange"> 
     <header>
@@ -18,7 +20,7 @@
                 <div class="nav__bar">
                     <div >
                         <a href="../Index.html" class="nav__bar__logo">
-                            <img src="../img/pokebola.png" alt="" class="nav__bar__logo__img">
+                            <img src="../img/pokebola.png" alt="Logo" class="nav__bar__logo__img">
                             <div class="nav__bar__logo__pokedex">PokéDEX</div>
                         </a>
                     </div>
@@ -136,15 +138,15 @@
             <!--grid-->
             <div class="wallet__grid">
                 <div class="wallet__grid__item">
-                    <img src="../img/metamask.png" alt="" class="wallet__grid__item__img">
+                    <img src="../img/metamask.png" alt="wallet" class="wallet__grid__item__img">
                     <div class="wallet__grid__item__text">Metamask</div>
                 </div>
                 <div class="wallet__grid__item">
-                    <img src="../img/walletbnb.png" alt="" class="wallet__grid__item__img">
+                    <img src="../img/walletbnb.png" alt="wallet" class="wallet__grid__item__img">
                     <div class="wallet__grid__item__text">Binance Wallet</div>
                 </div>
                 <div class="wallet__grid__item">
-                    <img src="../img/coinbase.png" alt="" class="wallet__grid__item__img">
+                    <img src="../img/coinbase.png" alt="wallet" class="wallet__grid__item__img">
                     <div class="wallet__grid__item__text">Coinbase Wallet</div>
                 </div>
                 <div class="wallet__grid__item wallet__grid__item__more">
@@ -171,7 +173,8 @@
                             leaderboard
                             </span>
                     </div>
-                    <h3 class="swap__top__text">Swap </h3>
+                      <!--Encabezado-->
+                    <h1 class="swap__top__text">Swap </h1>
                     <div>
                         <span class="material-icons-outlined swap__top__dirrection__span">
                             settings
@@ -191,7 +194,7 @@
             <div class="swap__middle">
 
                     <div class="swap__middle__token">   
-                        <img src="../img/walletbnb.png" alt="" class="swap__middle__token__img">
+                        <img src="../img/walletbnb.png" alt="wallet" class="swap__middle__token__img">
                         <div>BNB</div>
                         <div><span class="material-icons-outlined">
                             expand_more
@@ -209,7 +212,7 @@
                     </div>
 
                     <div class="swap__middle__token">   
-                        <img src="../img/pokebola.png" alt="" class="swap__middle__token__img">
+                        <img src="../img/pokebola.png" alt="Logo" class="swap__middle__token__img">
                         <div>BALL</div>
                         <div><span class="material-icons-outlined">
                             expand_more
@@ -234,7 +237,7 @@
         <div>
             <a href="../menu/info.html" style="text-decoration: none;"><span class="help__text">help?</span></a>
         </div>
-        <img src="../img/charizard-help.png" alt="" class="help__img">
+        <img src="../img/charizard-help.png" alt="charizard help" class="help__img">
     </div>
     <footer class="footer__none bg-red">    
         <section class="footer">
