--- a/menu/nft.html
+++ b/menu/nft.html
@@ -4,12 +4,14 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Cheaper and faster than Uniswap? Discover PokéDEX, the DEX of the BNB Smart Chain (BSC) trainers with the best DeFi farms.">
+        <meta name="keywords" content="DEFI, DEX, EXCHANGE, CRIPTO, YIELD FARMING, POKEMON, NFT">
         <link rel="stylesheet" href="../css/main.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Kanit&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Material+Icons+Outlined">
-        <title>Document</title>
+        <title>PokéDEX</title>
     </head>
 <body style="background-color: #f7f7f7;">
     
@@ -23,7 +25,7 @@
     <div class="recuadro__opt">
         <div>
             <div>
-                <a href="./nft/collection.html" class="recuadro__opt__collections">Collections</a>
+                <a href="./collection.html" class="recuadro__opt__collections">Collections</a>
             </div>
             <div>
                 <a href="" class="recuadro__opt__lands">Lands</a>
