--- a/menu/nft.html
+++ b/menu/nft.html
@@ -28,7 +28,7 @@
                 <a href="./collection.html" class="recuadro__opt__collections">Collections</a>
             </div>
             <div>
-                <a href="" class="recuadro__opt__lands">Lands</a>
+                <a href="./lands.html" class="recuadro__opt__lands">Lands</a>
             </div>
             <div>
                 <a href="" class="recuadro__opt__mint">Mint a NFT</a>
